# Stream

./: .gitignore  README.ko.md  README.md  SECURITY.ko.md  SECURITY.md  pyproject.toml
.github/workflows/: checks.yml
docs/: USER_GUIDE.en.md  USER_GUIDE.ko.md
docs/en/: api-reference.md  cli-reference.md  examples.md  faq.md  getting-started.md  integrity-and-repair.md  layout-and-storage.md  mental-model.md  read-path.md  write-path.md
docs/ko/: api-reference.md  cli-reference.md  examples.md  faq.md  getting-started.md  integrity-and-repair.md  layout-and-storage.md  mental-model.md  read-path.md  write-path.md
examples/: basic_usage.py
scripts/: policy_checks.py
src/stream/: __init__.py  cli.py  contracts.py  logging.py
src/stream/api/: __init__.py  store.py
src/stream/config/: __init__.py  models.py
src/stream/exceptions/: __init__.py  errors.py
src/stream/export/: __init__.py  service.py
src/stream/indexing/: __init__.py  service.py
src/stream/integrity/: __init__.py  service.py
src/stream/layout/: __init__.py  manager.py  models.py
src/stream/models/: __init__.py  canonical_validation.py  payload_validation.py  records.py  results.py  spine_adapter.py
src/stream/reader/: __init__.py  service.py
src/stream/repair/: __init__.py  service.py
src/stream/replay/: __init__.py  service.py
src/stream/writer/: __init__.py  service.py
tests/: test_stream_store.py
tests/fixtures/store_v1_clean/: manifest.json
tests/fixtures/store_v1_clean/segments/: segment-000001.jsonl
tests/fixtures/store_v1_truncated/segments/: segment-000001.jsonl
